fix: sidebar text alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ aside {
     transition: 0.7s;
 }
 aside p {
-    margin: 30px 0 10px 35px;
+    margin: 30px 0 10px 40px;
     font-weight: 500;
     color: rgb(219, 47, 4);
 }
